--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,31 @@ body {
 }
 
 .back-button {
-    font-size: 1.2em;
-    margin: 20px;
+    position: fixed;
+    top: 10px;
+    right: 20px;
+    font-size: 14px;
+    padding: 8px 12px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    color: #007BFF;
-    text-decoration: underline;
+    opacity: 0.7;
+    transition: opacity 0.3s ease;
+}
+
+.back-button:hover {
+    opacity: 1;
+}
+
+.back-button:active {
+    background-color: #0056b3;
+}
+
+.back-button-hidden {
+    display: none;
+    /* Hide the button initially or when it's not needed */
 }
 
 .overlay {
@@ -102,4 +122,45 @@ body {
     font-size: 24px;
     color: white;
     cursor: pointer;
+}
+
+.album-cover video {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+#uploadButton {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#uploadButton:hover {
+    background-color: #0056b3;
+}
+
+.spinner {
+    display: none;
+    margin-left: 10px;
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #007BFF;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
